--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.30.3",
   "main": "main.js",
   "dependencies": {
+    "angular-ui-router": "^0.2.15",
     "sequelize": "^3.5.1",
-    "sqlite3": "^3.0.10"
+    "sqlite3": "^3.0.10",
+    "ui-router": "0.0.1"
   },
   "scripts": {
     "postinstall": "npm run rebuild-sqlite3",
